# CLITE

./: .gitignore  CMakeLists.txt  README.md
src/: display.c  display.h  editor.h  file_io.c  file_io.h  main.c  mode_choice.c  mode_choice.h
